# MacroMancer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  table_of_contents.md
macromancer/: device_manager.py  fix_capture_keys.py  help.py  interactive_cli.py  main.py  utils.py
macromancer/.backlog/: README.md  macro.py  macro_input.py  macros.json  read_shortcuts.py  shortcut_scheme.txt
macromancer/config/: keyboard.yaml  mouse.yaml
macromancer/docs/: help.md
macromancer/tests/: test_device_manager.py  test_interactive_cli.py  test_utils.py
package/MacroMancer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
project-documents/: change_request.md  product_update_email.md  project_charter.md  project_concept.md  project_scope.md  risk_assessment.md  table_of_contents.md  work_breakdown_structure.md
